# logseq-plugin-collector

./: .gitignore  Cargo.toml  README.md
src/: main.rs
