[package]
name = "logseq-plugin-collector"
author = "Matthew Scheffel <matt@dataheck.com>"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
git2 = { version = "0.18" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.113"
walkdir = "2.4.0"
